Moved older homeworks into their own folder, to be deleted later. Updated made new homework 1.

--- a/02_activities/homework/homework_1.ipynb
+++ b/02_activities/homework/homework_1.ipynb
@@ -1,121 +1,146 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "dde65af3-543e-49db-9cdd-23c58593e30c",
    "metadata": {},
    "source": [
-    "## Homework 1\n",
-    "From Chapter 3, found on page 129 of ISLP\n",
+    "# Homework: Linear Regression with Iris Dataset\n",
     "\n",
-    "*This question involves the use of simple linear regression on the Auto data set*"
+    "In this homework, you will work through several questions related to simple linear regression. The dataset we will use is the famous **Iris dataset**, which contains measurements for 150 iris flowers. There are four features in the dataset: sepal length, sepal width, petal length, and petal width, all measured in centimeters. Additionally, the dataset includes the species of the iris flower: Setosa, Versicolor, or Virginica. \n",
+    "\n",
+    "![](../images/iris_dataset.jpg)\n",
+    "\n",
+    "Your task is to answer the following questions by performing linear regression on two of these variables, \n",
+    "specifically *sepal length* as the predictor and *petal length* as the response."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "acb70b75-4f4d-4081-86f3-7c48600e1023",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import standard libraries\n",
+    "# Import necessary libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib.pyplot import subplots\n",
-    "import statsmodels.api as sm\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# Import specific objects\n",
-    "from textwrap import wrap # to avoiding label overlapping in plots\n",
-    "from ISLP import load_data\n",
-    "from ISLP.models import (ModelSpec as MS,\n",
-    "                         summarize,\n",
-    "                         poly)\n",
-    "\n",
-    "# Load dataset\n",
-    "Auto = load_data('Auto')\n",
-    "Auto"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68acc068-630e-42e4-bcf6-e388732c67f2",
-   "metadata": {},
-   "source": [
-    "_a)_\tUse the `sm.OLS()` function to perform a simple linear regression with `mpg` as the response and `horsepower` as the predictor. Use the `model.summary()` function to print the results. Comment on the output\n",
-    "\n",
-    "(i) Is there a relationship between the predictor and the response?\n",
-    "\n",
-    "(ii) How strong is the relationship between the predictor and the response?\n",
-    "\n",
-    "(iii) Is the relationship between the predictor and the response positive or negative?\n",
-    "\n",
-    "(iv) What is the predicted mpg associated with a horsepower of 98? What are the associated 95 % confidence and prediction intervals?"
+    "# Load the Iris dataset\n",
+    "iris = sns.load_dataset(\"iris\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f4fd86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add your code here"
+    "# First, let's explore the dataset\n",
+    "iris.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb8e20e6-d15b-4c34-9cbe-650d582df4ab",
    "metadata": {},
    "source": [
-    "_b)_\tPlot the response and the predictor in a new set of axes `ax` using `scatter`. Use the `ax.plot()` function with the predictor and the model prediction as defined in the lab to display the least squares regression line."
+    "### Question 1\n",
+    "Is there a relationship between the predictor and the response? Choose 'sepal_length' as the predictor and 'petal_length' as the response variable.\n",
+    "\n",
+    "Task: Plot a scatter plot of sepal_length vs petal_length.\n",
+    "Fill the code below:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4614698",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add your code here"
+    "plt.figure(figsize=(8,6))\n",
+    "\n",
+    "# Your code here...\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "f4acb0fa-4fbb-4164-a81d-2f3d20237e7f",
    "metadata": {},
    "source": [
-    "_c)_\tProduce some of diagnostic plots of the least squares regression fit as described in the lab. Comment on any problems you see with the fit."
+    "### Question 2\n",
+    "Perform a simple linear regression using sepal_length to predict petal_length.\n",
+    "\n",
+    "Task: Split the data into training and testing sets (test size = 30%, random_state=42), fit a linear regression model using the training data, and plot the regression line on top of the scatter plot of the original data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b20459-e8e8-43ca-b5d6-88202a008cb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add your code here\n",
-    "#Plot at least the Scale-Location Plot, the QQ Plot and the Residuals vs Fitted Values Plot"
+    "# Prepare the data\n",
+    "X = iris[['sepal_length']]  # Predictor\n",
+    "y = iris['petal_length']    # Response\n",
+    "\n",
+    "# Your answer here...\n",
+    "\n",
+    "# Print the slope and intercept\n",
+    "print(f\"Slope (coefficient): {slope}\")\n",
+    "print(f\"Intercept: {intercept}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d6e87a8",
    "metadata": {},
    "source": [
-    "Additional Practice Questions: \n",
-    "- How would you describe this exercise in an interview to both a technical and non-technical interviewer? \n",
-    "- What are the key insights you would want to show? \n",
-    "- Can you think of a business context where this exercise would have applications?"
+    "### Question 3\n",
+    "What is the predicted petal length associated with a sepal length of 5.5?\n",
+    "\n",
+    "Task: Use the fitted model to predict petal length when sepal length is 5.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here...\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"The predicted petal length for a sepal length of 5.5 cm is: {predicted_petal_length} cm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4\n",
+    "Evaluate the model\n",
+    "Task: Compute the Root Mean Squared Percentage Error (RMSPE) of the model on the test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here...\n",
+    "\n",
+    "# Print the MSE\n",
+    "print(f\"The Mean Squared Error (MSE) of the model on the test data is: {RMSPE}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -129,9 +154,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
