--- a/01_materials/notebooks/Classification-1.ipynb
+++ b/01_materials/notebooks/Classification-1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +68,7 @@
        "      <th>concavity_mean</th>\n",
        "      <th>concave points_mean</th>\n",
        "      <th>...</th>\n",
+       "      <th>radius_worst</th>\n",
        "      <th>texture_worst</th>\n",
        "      <th>perimeter_worst</th>\n",
        "      <th>area_worst</th>\n",
@@ -77,7 +78,6 @@
        "      <th>concave points_worst</th>\n",
        "      <th>symmetry_worst</th>\n",
        "      <th>fractal_dimension_worst</th>\n",
-       "      <th>Unnamed: 32</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -94,6 +94,7 @@
        "      <td>0.30010</td>\n",
        "      <td>0.14710</td>\n",
        "      <td>...</td>\n",
+       "      <td>25.380</td>\n",
        "      <td>17.33</td>\n",
        "      <td>184.60</td>\n",
        "      <td>2019.0</td>\n",
@@ -103,7 +104,6 @@
        "      <td>0.2654</td>\n",
        "      <td>0.4601</td>\n",
        "      <td>0.11890</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -118,6 +118,7 @@
        "      <td>0.08690</td>\n",
        "      <td>0.07017</td>\n",
        "      <td>...</td>\n",
+       "      <td>24.990</td>\n",
        "      <td>23.41</td>\n",
        "      <td>158.80</td>\n",
        "      <td>1956.0</td>\n",
@@ -127,7 +128,6 @@
        "      <td>0.1860</td>\n",
        "      <td>0.2750</td>\n",
        "      <td>0.08902</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -142,6 +142,7 @@
        "      <td>0.19740</td>\n",
        "      <td>0.12790</td>\n",
        "      <td>...</td>\n",
+       "      <td>23.570</td>\n",
        "      <td>25.53</td>\n",
        "      <td>152.50</td>\n",
        "      <td>1709.0</td>\n",
@@ -151,7 +152,6 @@
        "      <td>0.2430</td>\n",
        "      <td>0.3613</td>\n",
        "      <td>0.08758</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -166,6 +166,7 @@
        "      <td>0.24140</td>\n",
        "      <td>0.10520</td>\n",
        "      <td>...</td>\n",
+       "      <td>14.910</td>\n",
        "      <td>26.50</td>\n",
        "      <td>98.87</td>\n",
        "      <td>567.7</td>\n",
@@ -175,7 +176,6 @@
        "      <td>0.2575</td>\n",
        "      <td>0.6638</td>\n",
        "      <td>0.17300</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -190,6 +190,7 @@
        "      <td>0.19800</td>\n",
        "      <td>0.10430</td>\n",
        "      <td>...</td>\n",
+       "      <td>22.540</td>\n",
        "      <td>16.67</td>\n",
        "      <td>152.20</td>\n",
        "      <td>1575.0</td>\n",
@@ -199,7 +200,6 @@
        "      <td>0.1625</td>\n",
        "      <td>0.2364</td>\n",
        "      <td>0.07678</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -238,6 +238,7 @@
        "      <td>0.24390</td>\n",
        "      <td>0.13890</td>\n",
        "      <td>...</td>\n",
+       "      <td>25.450</td>\n",
        "      <td>26.40</td>\n",
        "      <td>166.10</td>\n",
        "      <td>2027.0</td>\n",
@@ -247,7 +248,6 @@
        "      <td>0.2216</td>\n",
        "      <td>0.2060</td>\n",
        "      <td>0.07115</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>565</th>\n",
@@ -262,6 +262,7 @@
        "      <td>0.14400</td>\n",
        "      <td>0.09791</td>\n",
        "      <td>...</td>\n",
+       "      <td>23.690</td>\n",
        "      <td>38.25</td>\n",
        "      <td>155.00</td>\n",
        "      <td>1731.0</td>\n",
@@ -271,7 +272,6 @@
        "      <td>0.1628</td>\n",
        "      <td>0.2572</td>\n",
        "      <td>0.06637</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>566</th>\n",
@@ -286,6 +286,7 @@
        "      <td>0.09251</td>\n",
        "      <td>0.05302</td>\n",
        "      <td>...</td>\n",
+       "      <td>18.980</td>\n",
        "      <td>34.12</td>\n",
        "      <td>126.70</td>\n",
        "      <td>1124.0</td>\n",
@@ -295,7 +296,6 @@
        "      <td>0.1418</td>\n",
        "      <td>0.2218</td>\n",
        "      <td>0.07820</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>567</th>\n",
@@ -310,6 +310,7 @@
        "      <td>0.35140</td>\n",
        "      <td>0.15200</td>\n",
        "      <td>...</td>\n",
+       "      <td>25.740</td>\n",
        "      <td>39.42</td>\n",
        "      <td>184.60</td>\n",
        "      <td>1821.0</td>\n",
@@ -319,7 +320,6 @@
        "      <td>0.2650</td>\n",
        "      <td>0.4087</td>\n",
        "      <td>0.12400</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>568</th>\n",
@@ -334,6 +334,7 @@
        "      <td>0.00000</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>...</td>\n",
+       "      <td>9.456</td>\n",
        "      <td>30.37</td>\n",
        "      <td>59.16</td>\n",
        "      <td>268.6</td>\n",
@@ -343,11 +344,10 @@
        "      <td>0.0000</td>\n",
        "      <td>0.2871</td>\n",
        "      <td>0.07039</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>569 rows × 33 columns</p>\n",
+       "<p>569 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -377,55 +377,55 @@
        "567          0.11780           0.27700         0.35140              0.15200   \n",
        "568          0.05263           0.04362         0.00000              0.00000   \n",
        "\n",
-       "     ...  texture_worst  perimeter_worst  area_worst  smoothness_worst  \\\n",
-       "0    ...          17.33           184.60      2019.0           0.16220   \n",
-       "1    ...          23.41           158.80      1956.0           0.12380   \n",
-       "2    ...          25.53           152.50      1709.0           0.14440   \n",
-       "3    ...          26.50            98.87       567.7           0.20980   \n",
-       "4    ...          16.67           152.20      1575.0           0.13740   \n",
-       "..   ...            ...              ...         ...               ...   \n",
-       "564  ...          26.40           166.10      2027.0           0.14100   \n",
-       "565  ...          38.25           155.00      1731.0           0.11660   \n",
-       "566  ...          34.12           126.70      1124.0           0.11390   \n",
-       "567  ...          39.42           184.60      1821.0           0.16500   \n",
-       "568  ...          30.37            59.16       268.6           0.08996   \n",
+       "     ...  radius_worst  texture_worst  perimeter_worst  area_worst  \\\n",
+       "0    ...        25.380          17.33           184.60      2019.0   \n",
+       "1    ...        24.990          23.41           158.80      1956.0   \n",
+       "2    ...        23.570          25.53           152.50      1709.0   \n",
+       "3    ...        14.910          26.50            98.87       567.7   \n",
+       "4    ...        22.540          16.67           152.20      1575.0   \n",
+       "..   ...           ...            ...              ...         ...   \n",
+       "564  ...        25.450          26.40           166.10      2027.0   \n",
+       "565  ...        23.690          38.25           155.00      1731.0   \n",
+       "566  ...        18.980          34.12           126.70      1124.0   \n",
+       "567  ...        25.740          39.42           184.60      1821.0   \n",
+       "568  ...         9.456          30.37            59.16       268.6   \n",
        "\n",
-       "     compactness_worst  concavity_worst  concave points_worst  symmetry_worst  \\\n",
-       "0              0.66560           0.7119                0.2654          0.4601   \n",
-       "1              0.18660           0.2416                0.1860          0.2750   \n",
-       "2              0.42450           0.4504                0.2430          0.3613   \n",
-       "3              0.86630           0.6869                0.2575          0.6638   \n",
-       "4              0.20500           0.4000                0.1625          0.2364   \n",
-       "..                 ...              ...                   ...             ...   \n",
-       "564            0.21130           0.4107                0.2216          0.2060   \n",
-       "565            0.19220           0.3215                0.1628          0.2572   \n",
-       "566            0.30940           0.3403                0.1418          0.2218   \n",
-       "567            0.86810           0.9387                0.2650          0.4087   \n",
-       "568            0.06444           0.0000                0.0000          0.2871   \n",
+       "     smoothness_worst  compactness_worst  concavity_worst  \\\n",
+       "0             0.16220            0.66560           0.7119   \n",
+       "1             0.12380            0.18660           0.2416   \n",
+       "2             0.14440            0.42450           0.4504   \n",
+       "3             0.20980            0.86630           0.6869   \n",
+       "4             0.13740            0.20500           0.4000   \n",
+       "..                ...                ...              ...   \n",
+       "564           0.14100            0.21130           0.4107   \n",
+       "565           0.11660            0.19220           0.3215   \n",
+       "566           0.11390            0.30940           0.3403   \n",
+       "567           0.16500            0.86810           0.9387   \n",
+       "568           0.08996            0.06444           0.0000   \n",
        "\n",
-       "     fractal_dimension_worst  Unnamed: 32  \n",
-       "0                    0.11890          NaN  \n",
-       "1                    0.08902          NaN  \n",
-       "2                    0.08758          NaN  \n",
-       "3                    0.17300          NaN  \n",
-       "4                    0.07678          NaN  \n",
-       "..                       ...          ...  \n",
-       "564                  0.07115          NaN  \n",
-       "565                  0.06637          NaN  \n",
-       "566                  0.07820          NaN  \n",
-       "567                  0.12400          NaN  \n",
-       "568                  0.07039          NaN  \n",
+       "     concave points_worst  symmetry_worst  fractal_dimension_worst  \n",
+       "0                  0.2654          0.4601                  0.11890  \n",
+       "1                  0.1860          0.2750                  0.08902  \n",
+       "2                  0.2430          0.3613                  0.08758  \n",
+       "3                  0.2575          0.6638                  0.17300  \n",
+       "4                  0.1625          0.2364                  0.07678  \n",
+       "..                    ...             ...                      ...  \n",
+       "564                0.2216          0.2060                  0.07115  \n",
+       "565                0.1628          0.2572                  0.06637  \n",
+       "566                0.1418          0.2218                  0.07820  \n",
+       "567                0.2650          0.4087                  0.12400  \n",
+       "568                0.0000          0.2871                  0.07039  \n",
        "\n",
-       "[569 rows x 33 columns]"
+       "[569 rows x 32 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cancer = pd.read_csv('wdbc.csv')\n",
+    "cancer = pd.read_csv('dataset/wdbc.csv')\n",
     "cancer"
    ]
   },
@@ -2340,7 +2340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
