--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -251,15 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72c101f2",
+   "execution_count": 31,
+   "id": "78a88a6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Do not touch\n",
     "np.random.seed(123)\n",
     "# Create a random vector of True and False values to split the data\n",
-    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])"
+    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
+    "\n",
+    "# Your code here..."
    ]
   },
   {
@@ -377,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
