--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -359,6 +359,14 @@
     "\n",
     "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-4-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44cb44b",
+   "metadata": {},
+   "source": [
+    "Thanks Vishnou"
+   ]
   }
  ],
  "metadata": {
