--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -56,10 +56,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>malic_acid</th>\n",
+       "      <th>ash</th>\n",
+       "      <th>alcalinity_of_ash</th>\n",
+       "      <th>magnesium</th>\n",
+       "      <th>total_phenols</th>\n",
+       "      <th>flavanoids</th>\n",
+       "      <th>nonflavanoid_phenols</th>\n",
+       "      <th>proanthocyanins</th>\n",
+       "      <th>color_intensity</th>\n",
+       "      <th>hue</th>\n",
+       "      <th>od280/od315_of_diluted_wines</th>\n",
+       "      <th>proline</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.23</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>5.64</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>3.92</td>\n",
+       "      <td>1065.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.20</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>2.14</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13.16</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>5.68</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>1185.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14.37</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>3.85</td>\n",
+       "      <td>3.49</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>7.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>1480.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13.24</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>2.69</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>735.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>13.71</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>740.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>13.40</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>7.30</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>13.27</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>10.20</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>835.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>13.17</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>9.30</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>840.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>14.13</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>9.20</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>560.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>178 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
+       "0      14.23        1.71  2.43               15.6      127.0           2.80   \n",
+       "1      13.20        1.78  2.14               11.2      100.0           2.65   \n",
+       "2      13.16        2.36  2.67               18.6      101.0           2.80   \n",
+       "3      14.37        1.95  2.50               16.8      113.0           3.85   \n",
+       "4      13.24        2.59  2.87               21.0      118.0           2.80   \n",
+       "..       ...         ...   ...                ...        ...            ...   \n",
+       "173    13.71        5.65  2.45               20.5       95.0           1.68   \n",
+       "174    13.40        3.91  2.48               23.0      102.0           1.80   \n",
+       "175    13.27        4.28  2.26               20.0      120.0           1.59   \n",
+       "176    13.17        2.59  2.37               20.0      120.0           1.65   \n",
+       "177    14.13        4.10  2.74               24.5       96.0           2.05   \n",
+       "\n",
+       "     flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
+       "0          3.06                  0.28             2.29             5.64  1.04   \n",
+       "1          2.76                  0.26             1.28             4.38  1.05   \n",
+       "2          3.24                  0.30             2.81             5.68  1.03   \n",
+       "3          3.49                  0.24             2.18             7.80  0.86   \n",
+       "4          2.69                  0.39             1.82             4.32  1.04   \n",
+       "..          ...                   ...              ...              ...   ...   \n",
+       "173        0.61                  0.52             1.06             7.70  0.64   \n",
+       "174        0.75                  0.43             1.41             7.30  0.70   \n",
+       "175        0.69                  0.43             1.35            10.20  0.59   \n",
+       "176        0.68                  0.53             1.46             9.30  0.60   \n",
+       "177        0.76                  0.56             1.35             9.20  0.61   \n",
+       "\n",
+       "     od280/od315_of_diluted_wines  proline  class  \n",
+       "0                            3.92   1065.0      0  \n",
+       "1                            3.40   1050.0      0  \n",
+       "2                            3.17   1185.0      0  \n",
+       "3                            3.45   1480.0      0  \n",
+       "4                            2.93    735.0      0  \n",
+       "..                            ...      ...    ...  \n",
+       "173                          1.74    740.0      2  \n",
+       "174                          1.56    750.0      2  \n",
+       "175                          1.56    835.0      2  \n",
+       "176                          1.62    840.0      2  \n",
+       "177                          1.60    560.0      2  \n",
+       "\n",
+       "[178 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_wine\n",
     "\n",
@@ -91,12 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56916892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 178\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "num_rows = wine_df.shape[0]  #shape[0] for rows\n",
+    "print(f\"Number of rows: {num_rows}\")\n"
    ]
   },
   {
@@ -109,12 +397,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "df0ef103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns: 14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "num_cols = wine_df.shape[1]  #shape[1] for columns\n",
+    "print(f\"Number of columns: {num_cols}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2e92793d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 178 entries, 0 to 177\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   alcohol                       178 non-null    float64\n",
+      " 1   malic_acid                    178 non-null    float64\n",
+      " 2   ash                           178 non-null    float64\n",
+      " 3   alcalinity_of_ash             178 non-null    float64\n",
+      " 4   magnesium                     178 non-null    float64\n",
+      " 5   total_phenols                 178 non-null    float64\n",
+      " 6   flavanoids                    178 non-null    float64\n",
+      " 7   nonflavanoid_phenols          178 non-null    float64\n",
+      " 8   proanthocyanins               178 non-null    float64\n",
+      " 9   color_intensity               178 non-null    float64\n",
+      " 10  hue                           178 non-null    float64\n",
+      " 11  od280/od315_of_diluted_wines  178 non-null    float64\n",
+      " 12  proline                       178 non-null    float64\n",
+      " 13  class                         178 non-null    int32  \n",
+      "dtypes: float64(13), int32(1)\n",
+      "memory usage: 18.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Summary of wine_data\n",
+    "wine_df.info()\n"
    ]
   },
   {
@@ -127,12 +464,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "47989426",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variable type of class is: int32\n",
+      "unique values in class is: [0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "class_type = wine_df.dtypes['class']\n",
+    "print(f\"variable type of class is: {class_type}\")\n",
+    "\n",
+    "class_unique_vals = wine_df['class'].unique()\n",
+    "print(f\"unique values in class is: {class_unique_vals}\")"
    ]
   },
   {
@@ -146,12 +497,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bd7b0910",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of predictor variables is: 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "num_predictors = wine_df.drop('class', axis=1).shape[1] #dropping class column as its a response variable and extracting column count which is shape[1]\n",
+    "\n",
+    "print(f\"The number of predictor variables is: {num_predictors}\")"
    ]
   },
   {
