--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -537,10 +537,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cc899b59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    alcohol  malic_acid       ash  alcalinity_of_ash  magnesium  \\\n",
+      "0  1.518613   -0.562250  0.232053          -1.169593   1.913905   \n",
+      "1  0.246290   -0.499413 -0.827996          -2.490847   0.018145   \n",
+      "2  0.196879    0.021231  1.109334          -0.268738   0.088358   \n",
+      "3  1.691550   -0.346811  0.487926          -0.809251   0.930918   \n",
+      "4  0.295700    0.227694  1.840403           0.451946   1.281985   \n",
+      "\n",
+      "   total_phenols  flavanoids  nonflavanoid_phenols  proanthocyanins  \\\n",
+      "0       0.808997    1.034819             -0.659563         1.224884   \n",
+      "1       0.568648    0.733629             -0.820719        -0.544721   \n",
+      "2       0.808997    1.215533             -0.498407         2.135968   \n",
+      "3       2.491446    1.466525             -0.981875         1.032155   \n",
+      "4       0.808997    0.663351              0.226796         0.401404   \n",
+      "\n",
+      "   color_intensity       hue  od280/od315_of_diluted_wines   proline  \n",
+      "0         0.251717  0.362177                      1.847920  1.013009  \n",
+      "1        -0.293321  0.406051                      1.113449  0.965242  \n",
+      "2         0.269020  0.318304                      0.788587  1.395148  \n",
+      "3         1.186068 -0.427544                      1.184071  2.334574  \n",
+      "4        -0.319276  0.362177                      0.449601 -0.037874  \n"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the last column)\n",
     "predictors = wine_df.iloc[:, :-1]\n",
@@ -566,7 +593,9 @@
    "id": "403ef0bb",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "Standardizing predictor variables is important because it puts all features on the same scale, preventing any one feature from dominating just because its numbers are bigger. This helps the model work better and find patterns more efficiently. For models that rely on distances, like K-Nearest Neighbors, standardization ensures that all features are treated fairly in the calculations. It also keeps regularization penalties balanced, so no feature is unfairly reduced in importance. Overall, it makes features easier to compare and helps the model produce more accurate and fair results."
    ]
   },
   {
@@ -582,7 +611,11 @@
    "id": "fdee5a15",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "The response variable usually represents something concrete, like price, weight, or a simple yes or no. Keeping it in its original form helps make the predictions easier to understand.\n",
+    "\n",
+    "In this assignment, I'm building a model to classify different types of wine based on features like alcohol content, magnesium levels, flavanoids, and nonflavanoid phenols. The response variable here is the wine class, which I want to keep as either 0, 1, or 2. This way, we clearly identify the type of wine, which is how people generally think about buying wine. If I were to standardize the class, I’d lose that clarity and might end up with something confusing like “wine type 0.4” instead of a straightforward “wine type 1.” By keeping the class as it is, I can easily share the results with my peers, making sure everyone understands the predictions in a way that makes sense. While standardizing the features helps the model perform better, keeping the wine class in its original form makes the results clear and meaningful.\n"
    ]
   },
   {
@@ -598,7 +631,9 @@
    "id": "f0676c21",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "To put it simply, setting a random seed is super important because it makes sure that your experiments can be repeated reliably. The actual number you pick as your seed isn’t a big deal. what’s important is using the same one each time you run your code. This way, you’ll get the same results every time, which helps you check your work and see how things compare."
    ]
   },
   {
@@ -613,15 +648,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "72c101f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set (predictors) shape: (140, 13)\n",
+      "Test set (predictors) shape: (38, 13)\n",
+      "Training set (response) shape: (140,)\n",
+      "Test set (response) shape: (38,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Do not touch\n",
     "np.random.seed(123)\n",
     "# Create a random vector of True and False values to split the data\n",
-    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])"
+    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
+    "\n",
+    "# Split dataset to training and test sets of predcictors and response variable:\n",
+    "X_train =  predictors_standardized[split]  #Training data for predictors\n",
+    "X_test  =  predictors_standardized[~split] #Test data for predictors\n",
+    "\n",
+    "# Split the response variable ('class') into training and test sets\n",
+    "y_train = wine_df.loc[split, 'class']  # Training set for the response (class)\n",
+    "y_test = wine_df.loc[~split, 'class']  # Test set for the response (class)\n",
+    "\n",
+    "# Print shapes of training and test sets\n",
+    "print(f\"Training set (predictors) shape: {X_train.shape}\")\n",
+    "print(f\"Test set (predictors) shape: {X_test.shape}\")\n",
+    "print(f\"Training set (response) shape: {y_train.shape}\")\n",
+    "print(f\"Test set (response) shape: {y_test.shape}\")\n",
+    " "
    ]
   },
   {
