--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -681,8 +681,7 @@
     "print(f\"Training set (predictors) shape: {X_train.shape}\")\n",
     "print(f\"Test set (predictors) shape: {X_test.shape}\")\n",
     "print(f\"Training set (response) shape: {y_train.shape}\")\n",
-    "print(f\"Test set (response) shape: {y_test.shape}\")\n",
-    " "
+    "print(f\"Test set (response) shape: {y_test.shape}\")\n"
    ]
   },
   {
