Updated the a2 to address TF feedback.

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -249,7 +249,7 @@
    "id": "2b1ff3cf",
    "metadata": {},
    "source": [
-    "_(iii)_ What is the (implied) null hypothesis? What is the (implied) alternative hypothesis?"
+    "_(iii)_ Do all data points in the dataset fall perfectly along the plotted line? If not, why might there be deviations between the data points and the line, and what do these deviations indicate about the relationship between the variables?"
    ]
   },
   {
@@ -322,10 +322,10 @@
    "metadata": {},
    "source": [
     "#### **Question 4:** \n",
-    "#### Model evaluation\n",
+    "#### RMSPE\n",
     "**Step 3. Finally, we predict on the test data set to assess how well our model does.** \n",
     "\n",
-    "We will evaluate our final model's test error measured by RMSP."
+    "We will evaluate our final model's test error measured by RMSPE."
    ]
   },
   {
