--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -50,10 +50,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "      <th>s4</th>\n",
+       "      <th>s5</th>\n",
+       "      <th>s6</th>\n",
+       "      <th>progression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.038076</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.061696</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>-0.044223</td>\n",
+       "      <td>-0.034821</td>\n",
+       "      <td>-0.043401</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.019907</td>\n",
+       "      <td>-0.017646</td>\n",
+       "      <td>151.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.001882</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.051474</td>\n",
+       "      <td>-0.026328</td>\n",
+       "      <td>-0.008449</td>\n",
+       "      <td>-0.019163</td>\n",
+       "      <td>0.074412</td>\n",
+       "      <td>-0.039493</td>\n",
+       "      <td>-0.068332</td>\n",
+       "      <td>-0.092204</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.085299</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.044451</td>\n",
+       "      <td>-0.005670</td>\n",
+       "      <td>-0.045599</td>\n",
+       "      <td>-0.034194</td>\n",
+       "      <td>-0.032356</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.002861</td>\n",
+       "      <td>-0.025930</td>\n",
+       "      <td>141.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.089063</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.011595</td>\n",
+       "      <td>-0.036656</td>\n",
+       "      <td>0.012191</td>\n",
+       "      <td>0.024991</td>\n",
+       "      <td>-0.036038</td>\n",
+       "      <td>0.034309</td>\n",
+       "      <td>0.022688</td>\n",
+       "      <td>-0.009362</td>\n",
+       "      <td>206.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.005383</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.036385</td>\n",
+       "      <td>0.021872</td>\n",
+       "      <td>0.003935</td>\n",
+       "      <td>0.015596</td>\n",
+       "      <td>0.008142</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>-0.031988</td>\n",
+       "      <td>-0.046641</td>\n",
+       "      <td>135.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>0.041708</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>0.019662</td>\n",
+       "      <td>0.059744</td>\n",
+       "      <td>-0.005697</td>\n",
+       "      <td>-0.002566</td>\n",
+       "      <td>-0.028674</td>\n",
+       "      <td>-0.002592</td>\n",
+       "      <td>0.031193</td>\n",
+       "      <td>0.007207</td>\n",
+       "      <td>178.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>-0.005515</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>-0.015906</td>\n",
+       "      <td>-0.067642</td>\n",
+       "      <td>0.049341</td>\n",
+       "      <td>0.079165</td>\n",
+       "      <td>-0.028674</td>\n",
+       "      <td>0.034309</td>\n",
+       "      <td>-0.018114</td>\n",
+       "      <td>0.044485</td>\n",
+       "      <td>104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439</th>\n",
+       "      <td>0.041708</td>\n",
+       "      <td>0.050680</td>\n",
+       "      <td>-0.015906</td>\n",
+       "      <td>0.017293</td>\n",
+       "      <td>-0.037344</td>\n",
+       "      <td>-0.013840</td>\n",
+       "      <td>-0.024993</td>\n",
+       "      <td>-0.011080</td>\n",
+       "      <td>-0.046883</td>\n",
+       "      <td>0.015491</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>-0.045472</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>0.039062</td>\n",
+       "      <td>0.001215</td>\n",
+       "      <td>0.016318</td>\n",
+       "      <td>0.015283</td>\n",
+       "      <td>-0.028674</td>\n",
+       "      <td>0.026560</td>\n",
+       "      <td>0.044529</td>\n",
+       "      <td>-0.025930</td>\n",
+       "      <td>220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441</th>\n",
+       "      <td>-0.045472</td>\n",
+       "      <td>-0.044642</td>\n",
+       "      <td>-0.073030</td>\n",
+       "      <td>-0.081413</td>\n",
+       "      <td>0.083740</td>\n",
+       "      <td>0.027809</td>\n",
+       "      <td>0.173816</td>\n",
+       "      <td>-0.039493</td>\n",
+       "      <td>-0.004222</td>\n",
+       "      <td>0.003064</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>442 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          age       sex       bmi        bp        s1        s2        s3  \\\n",
+       "0    0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
+       "1   -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
+       "2    0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
+       "3   -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
+       "4    0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "437  0.041708  0.050680  0.019662  0.059744 -0.005697 -0.002566 -0.028674   \n",
+       "438 -0.005515  0.050680 -0.015906 -0.067642  0.049341  0.079165 -0.028674   \n",
+       "439  0.041708  0.050680 -0.015906  0.017293 -0.037344 -0.013840 -0.024993   \n",
+       "440 -0.045472 -0.044642  0.039062  0.001215  0.016318  0.015283 -0.028674   \n",
+       "441 -0.045472 -0.044642 -0.073030 -0.081413  0.083740  0.027809  0.173816   \n",
+       "\n",
+       "           s4        s5        s6  progression  \n",
+       "0   -0.002592  0.019907 -0.017646        151.0  \n",
+       "1   -0.039493 -0.068332 -0.092204         75.0  \n",
+       "2   -0.002592  0.002861 -0.025930        141.0  \n",
+       "3    0.034309  0.022688 -0.009362        206.0  \n",
+       "4   -0.002592 -0.031988 -0.046641        135.0  \n",
+       "..        ...       ...       ...          ...  \n",
+       "437 -0.002592  0.031193  0.007207        178.0  \n",
+       "438  0.034309 -0.018114  0.044485        104.0  \n",
+       "439 -0.011080 -0.046883  0.015491        132.0  \n",
+       "440  0.026560  0.044529 -0.025930        220.0  \n",
+       "441 -0.039493 -0.004222  0.003064         57.0  \n",
+       "\n",
+       "[442 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_diabetes\n",
     "\n",
@@ -89,7 +318,7 @@
    "id": "5bb4fee9",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Wine Dataset has 442 rows."
    ]
   },
   {
@@ -105,7 +334,7 @@
    "id": "6f49da4d",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> 11 variables."
    ]
   },
   {
@@ -379,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.4"
   },
   "vscode": {
    "interpreter": {
