working on Assignment 2 question 1
working on Assignment 2 question 1

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -331,12 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ac306190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " mpg variable is float.\n"
+     ]
+    }
+   ],
    "source": [
-    "# mpg variable is float."
+    "# mpg variable is float.\n",
+    "print(\" mpg variable is float.\")"
    ]
   },
   {
@@ -357,12 +366,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f034a5d",
+   "execution_count": 23,
+   "id": "9911fe4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here... "
+    "top_horsepower= mpg_data['horsepower'].nlargest(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9f034a5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116    230.0\n",
+      "8      225.0\n",
+      "13     225.0\n",
+      "95     225.0\n",
+      "6      220.0\n",
+      "Name: horsepower, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top_horsepower)"
    ]
   },
   {
@@ -375,12 +407,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "1b91233e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many predictor variables do we have (Hint: all variables other than `mpg`)? :  8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "predictor_variables=mpg_data.shape[1]-1\n",
+    "print(\"How many predictor variables do we have (Hint: all variables other than `mpg`)? : \", predictor_variables)"
    ]
   },
   {
