second question answered

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -458,7 +458,18 @@
    "id": "f67e57ab",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "Associations observed from the above graphs are:\n",
+    "\n",
+    "Positive Association: Acceleration vs Miles per Gallon, Model Year vs Miles per Gallon\n",
+    "Negative Association: Cylinders vs Miles per Gallon, Displacement vs Miles per Gallon, Horsepower vs Miles per Gallon and Weight vs Miles per Gallon\n",
+    "\n",
+    "In positive association: When one variable increases, the other also increases. In a scatterplot, you’ll see the points go from the bottom left to the top right. In this dataset, acceleration and model year have a positive association with miles per gallon (mpg). This makes sense because newer models tend to have better mpg, and cars with higher acceleration often have higher mpg as well.\n",
+    "\n",
+    "In negative association: When one variable increases, the other decreases. The points move from the top left to the bottom right. In this dataset, cylinders, displacement, horsepower, and weight all have a negative association with mpg. When these values are higher, cars use more fuel, which lowers mpg.\n",
+    "\n",
+    "No association: When there’s no clear relationship between two variables, the scatterplot points will be spread out with no pattern.\n"
    ]
   },
   {
@@ -474,7 +485,11 @@
    "id": "843f9eef",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "The line you see in a plot usually shows the overall trend or pattern between the two variables being compared. It helps to understand how one variable changes as the other variable changes.\n",
+    "\n",
+    "For example, if we look at a plot of miles per gallon (mpg) versus horsepower, the line shows whether cars with more horsepower tend to have higher or lower mpg. It's called a regression line or best-fit line, and it sums up the relationship between the two variables."
    ]
   },
   {
@@ -490,7 +505,20 @@
    "id": "2ea782fc",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    "All data points don't usually fall perfectly on the line. This is totally normal because the line shows the general trend, but in real life, things don’t always follow a perfect pattern.\n",
+    "\n",
+    "Why do the points deviate?\n",
+    "\n",
+    "Real-world variability: Things like mpg can be affected by more than just horsepower—other factors like car weight, acceleration, displacement, model year also matter, so some points will be off the line.\n",
+    "Randomness: There can be natural variation or random errors in the data that cause points to be higher or lower than the line.\n",
+    "\n",
+    "What do these deviations mean?\n",
+    "The gaps between the points and the line show how much the actual data differs from what the line predicts.\n",
+    "If the points are scattered around the line with no clear pattern, it means the line is a good general fit. If the points are way off or follow a curve, it means the relationship might be more complicated than the line suggests.\n",
+    "\n",
+    "In short, it’s normal for points to not be perfectly on the line—those deviations tell us that there are other things at play besides just horsepower."
    ]
   },
   {
