--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "5d79f1cf",
    "metadata": {},
    "outputs": [
@@ -208,14 +208,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows: 392\n"
+      "Number of rows: 392\n",
+      "Number of columns: 9\n"
      ]
     }
    ],
    "source": [
     "# Your answer here...\n",
     "num_rows = mpg_data.shape[0]  #shape[0] for rows\n",
-    "print(f\"Number of rows: {num_rows}\")"
+    "print(f\"Number of rows: {num_rows}\")\n",
+    "\n",
+    "num_cols = mpg_data.shape[1]  #shape[1] for columns\n",
+    "print(f\"Number of columns: {num_cols}\")"
    ]
   },
   {
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "ac306190",
    "metadata": {},
    "outputs": [
@@ -236,14 +240,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns: 9\n"
+      "variable type of class is: float64\n"
      ]
     }
    ],
    "source": [
     "# Your answer here...\n",
-    "num_cols = mpg_data.shape[1]  #shape[1] for columns\n",
-    "print(f\"Number of columns: {num_cols}\")"
+    "mpg_type = mpg_data.dtypes['mpg']\n",
+    "print(f\"variable type of class is: {mpg_type}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5985dad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The variable mpg (miles per gallon) is a float64, which means it’s a number that can have decimals. This allows it to show precise fuel efficiency, like 24.5 or 30.2 miles per gallon."
    ]
   },
   {
