--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -50,51 +50,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "be165a74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting seaborn\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from seaborn) (2.1.1)\n",
-      "Requirement already satisfied: pandas>=1.2 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from seaborn) (2.2.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from seaborn) (3.9.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.54.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\zekiye\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.1.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\zekiye\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\zekiye\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\zekiye\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
@@ -353,7 +308,7 @@
    "id": "6d759089",
    "metadata": {},
    "source": [
-    "Your explanation... \n"
+    "mpg variable is float because when we examine the numbers in mpg column, we see that it has numerical/contionus value.\n"
    ]
   },
   {
